# compact-tree-sitter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-improvement.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: checkmarx.yaml  dco.yml  publish.yml  scan.yaml  tests.yml
bindings/c/: tree-sitter-compact.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_compact/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCompact/: compact.h
bindings/swift/TreeSitterCompactTests/: TreeSitterCompactTests.swift
queries/: highlights.scm  setup.py
src/: grammar.json  node-types.json  parser.c
test/corpus/: 0.18.0.txt  0.19.0.txt  0.22.0.txt  bytes-and-spread.txt  circuit.txt  comments.txt  constructor.txt  enum.txt  export.txt  external-contract.txt  external.txt  functions.txt  import.txt  include.txt  ledger.txt  literals.txt  modules.txt  pragma.txt  statements.txt  struct.txt  type-alias.txt  witness.txt
