[package]
name = "tree-sitter-compact"
description = "A zero-knowledge smart contract programming language"
version = "0.1.0"
authors = ["Lucas Rosa <lucas.rosa@shielded.io>"]
license = "Apache"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "compact"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/midnight-ntwrk/tree-sitter-compact"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
