[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-compact"
description = "A zero-knowledge smart contract programming language"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "compact"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Lucas Rosa", email = "lucas.rosa@shielded.io" }]
requires-python = ">=3.10"
license.text = "Apache"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/midnight-ntwrk/tree-sitter-compact"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
